There were refactored code and added font

--- a/src/GUI/icons.qrc
+++ b/src/GUI/icons.qrc
@@ -9,6 +9,7 @@
         <file>private/countries_icons/en-language-icon.svg</file>
         <file>private/countries_icons/fr-language-icon.svg</file>
         <file>private/countries_icons/it-language-icon.svg</file>
+        <file>private/countries_icons/es-language-icon.svg</file>
         <file>private/countries_icons/ru-language-icon.svg</file>
         <file>private/countries_icons/uk-language-icon.svg</file>
     </qresource>
